--- a/_themes/ploneorg/layout.html
+++ b/_themes/ploneorg/layout.html
@@ -61,7 +61,7 @@
         <span class="icon-bar"></span>
       </button>
     </div>
-
+{#
     <div id="sites-select">
       <ul>
         <li><a href="#">Select your country</a>
@@ -74,12 +74,13 @@
         </li>
       </ul>
     </div>
-
-    <div class="search">
-      
+#}
+    <div class="search navbar-right">
+      {{searchbox}} Search 
     </div>
-    <div class="collapse navbar-collapse">
-      <ul id="links-select" class="nav navbar-nav">
+
+    <div class="collapse navbar-collapse navbar-right">
+      <ul class="nav navbar-nav">
         <li>
           <a title="Plone Planet" href="http://planet.plone.org">PLANET</a>
         </li>
