editor tab implemented in themes

--- a/_themes/ploneorg/layout.html
+++ b/_themes/ploneorg/layout.html
@@ -6,15 +6,15 @@
 
 <!-- $Id$ -->
 {% block extrahead %}
-  <link rel="stylesheet" type="text/css" href="{{pathto('_static/',1)}}css/bootstrap.min.css">
-  <script src="{{pathto('_static/',1)}}js/jquery-1.9.1.min.js"
+  <link rel="stylesheet" type="text/css" href="{{pathto('_static/css/bootstrap.min.css',1)}}">
+  <script src="{{pathto('_static/js/jquery-1.9.1.min.js',1)}}"
           type="text/javascript"
           language="text/javascript" ></script>
-  <script src="{{pathto('_static/',1)}}js/bootstrap.min.js"
+  <script src="{{pathto('_static/js/bootstrap.min.js',1)}}"
           type="text/javascript"
           language="text/javascript"  ></script>
 
-  <script src="{{pathto('_static/',1)}}js/topbar_load.js"
+  <script src="{{pathto('_static/js/topbar_load.js',1)}}"
           type="text/javascript"
           language="text/javascript"  ></script>
 {% endblock %}
@@ -176,7 +176,6 @@
     </nav>
   </div>
 </footer>
-
 
   <script src="{{pathto('_static/',1)}}js/topbar_load.js"
           type="text/javascript"
