--- a/_templates/doormat.html
+++ b/_templates/doormat.html
@@ -1,6 +1,6 @@
 {% block doormat%}
     <nav class="row">
-      <div class="col-xs-3">
+      <div class="col-xs-6 col-sm-3">
       Further help resources:
         <ul class="list-unstyled">
         	<li><a href="http://community.plone.org">Community discussion</a></li>
@@ -8,21 +8,22 @@
           <li><a href="http://plone.org/support/chat">IRC Chat</a></li>
         </ul>
       </div>
-      <div class="col-xs-3">
+      <div class="col-xs-6 col-sm-3">
       More info on the Plone project:
         <ul class="list-unstyled">
           <li><a href="https://plone.org/foundation">Plone Foundation</a></li>
-          <li><a href="https://plone.org/support/network">Providers & Consultants</a></li>
+          <li><a href="https://plone.org/support/network">Providers &amp; Consultants</a></li>
         </ul>
       </div>
-      <div class="col-xs-3">
+      <div class="clearfix visible-xs"></div>
+      <div class="col-xs-6 col-sm-3">
       About this documentation
         <ul class="list-unstyled">
           <li><a href="http://docs.plone.org/about/contributing.html#id6">Contribute</a></li>
           <li><a href="https://github.com/plone/documentation">These docs on Github</a></li>
         </ul>
       </div>
-      <div class="col-xs-3">
+      <div class="col-xs-6 col-sm-3">
       Download:
         <ul class="list-unstyled">
           <li><a href="http://plone.org/products/plone">Plone</a></li>
