--- a/_templates/doormat.html
+++ b/_templates/doormat.html
@@ -17,7 +17,7 @@
       </div>
       <div class="clearfix visible-xs"></div>
       <div class="col-xs-6 col-sm-3">
-      About this documentation
+      About this documentation:
         <ul class="list-unstyled">
           <li><a href="http://docs.plone.org/about/contributing.html#id6">Contribute</a></li>
           <li><a href="https://github.com/plone/documentation">These docs on Github</a></li>
