[ci skip] Fix missing qoute

--- a/_templates/version_warning.html
+++ b/_templates/version_warning.html
@@ -5,4 +5,4 @@
     <p class="last">The version you are using is for use with the outdated version of Plone: 3.X, If you want to procced with the current Version of the docs please read <a href="">Plone 4.3 Documentation</a></p>
   </div>
 </div>
-
+{% endblock %}
