[ci skip] Fix link to u2d docs

--- a/_templates/version_warning.html
+++ b/_templates/version_warning.html
@@ -2,7 +2,9 @@
 <div class="row">
   <div class="col-sm-12 admonition warning version_warning" >
     <p class="first admonition-title">Warning</p>
-    <p class="last">The version you are using is for use with the outdated version of Plone: 3.X, If you want to procced with the current Version of the docs please read <a href="">Plone 4.3 Documentation</a></p>
+    <p class="last">The version you are using is for use with the outdated
+    version of Plone: 3.X, If you want to procced with the current Version of
+    the docs please read <a href="http://docs.plone.org">Plone 4.3 Documentation</a></p>
   </div>
 </div>
 {% endblock %}
