--- a/_templates/version_warning.html
+++ b/_templates/version_warning.html
@@ -2,8 +2,8 @@
 <div class="row">
   <div class="col-sm-12 admonition warning version_warning" >
     <p class="first admonition-title">Warning</p>
-    <p class="last">The version is a draft for Plone 5, this is WIP !!
-    !!DO NOT!! use this docs, please use the docs of the our current stable version
+    <p class="last">The version is a draft for Plone 5, this is a Work In Progress! Pull requests welcome... <br />
+    !!DO NOT!! use these docs in production, please use the docs of the our current stable version
     [Plone 4] <a href="http://docs.plone.org">Plone 4.3 Documentation</a></p>
   </div>
 </div>
