Site Setup screens, getting there...

--- a/_templates/version_warning.html
+++ b/_templates/version_warning.html
@@ -2,9 +2,9 @@
 <div class="row">
   <div class="col-sm-12 admonition warning version_warning" >
     <p class="first admonition-title">Warning</p>
-    <p class="last">The version is a draft for Plone 5, this is a Work In Progress! Pull requests welcome... <br />
-    !!DO NOT!! use these docs in production, please use the docs of the our current stable version
-    [Plone 4] <a href="http://docs.plone.org">Plone 4.3 Documentation</a></p>
+    <p class="last">The documentation version is a beta for Plone 5, this is a Work In Progress! Pull requests welcome... <br />
+    This documentation has undergone less review than the
+     <a href="http://docs.plone.org/4/en">Plone 4.3 Documentation</a>, so when in doubt also consult there.</p>
   </div>
 </div>
 {% endblock %}
