--- a/_templates/version_warning.html
+++ b/_templates/version_warning.html
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-sm-12 admonition warning version_warning" >
     <p class="first admonition-title">Warning</p>
-    <p class="last">The documentation version is a beta for Plone 5, this is a Work In Progress! Pull requests welcome... <br />
+    <p class="last">This is the documentation for the just-released Plone 5 <br />
     This documentation has undergone less review than the
      <a href="http://docs.plone.org/4/en">Plone 4.3 Documentation</a>, so when in doubt also consult there.</p>
   </div>
