--- a/_templates/version_warning.html
+++ b/_templates/version_warning.html
@@ -3,6 +3,7 @@
   <div class="col-sm-12 admonition warning version_warning" >
     <p class="first admonition-title">Warning</p>
    <p class="last">This is the documentation for the just-released Plone 5, and is updated regularly.<br />
+    Please note, not all add-ons are working with Plone 5, yet !<br />
     There have been many changes in this version, so if you are using Plone 4 do consult the <a href="http://docs.plone.org/4/en">Plone 4.3 Documentation</a></p>
   </div>
 </div>
