Update doormat with uo to date links

--- a/_templates/doormat.html
+++ b/_templates/doormat.html
@@ -12,7 +12,8 @@
       More info on the Plone project:
         <ul class="list-unstyled">
           <li><a href="https://plone.org/foundation">Plone Foundation</a></li>
-          <li><a href="https://plone.org/support/network">Providers &amp; Consultants</a></li>
+	  <li><a href="https://plone.com/success-stories">Success Stories</a></li>
+          <li><a href="https://plone.com/providers">Providers &amp; Consultants</a></li>
         </ul>
       </div>
       <div class="clearfix visible-xs"></div>
