--- a/_templates/version_warning.html
+++ b/_templates/version_warning.html
@@ -2,9 +2,8 @@
 <div class="row">
   <div class="col-sm-12 admonition warning version_warning" >
     <p class="first admonition-title">Warning</p>
-    <p class="last">The version you are using is for use with the outdated
-    version of Plone: 3.X, If you want to procced with the current Version of
-    the docs please read <a href="http://docs.plone.org">Plone 4.3 Documentation</a></p>
+    <p class="last">This version is valid for an outdated
+    version of Plone: 3.X. Use the <b>Version</b> drop-down above to go to the <a href="http://docs.plone.org/5/en">Plone 5 (current stable)</a> or <a href="http://docs.plone.org/4/en">Plone 4</a> versions</p>
   </div>
 </div>
 {% endblock %}
