--- a/_templates/doormat.html
+++ b/_templates/doormat.html
@@ -20,7 +20,7 @@
       <div class="col-xs-6 col-sm-3">
       About this documentation:
         <ul class="list-unstyled">
-          <li><a href="http://docs.plone.org/about/contributing.html#id6">Contribute</a></li>
+          <li><a href="http://docs.plone.org/about/contributing.html">Contribute</a></li>
           <li><a href="https://github.com/plone/documentation">These docs on GitHub</a></li>
         </ul>
       </div>
