Updated add-ons/downloads link
Direct link to add-ons/downloads

--- a/_templates/doormat.html
+++ b/_templates/doormat.html
@@ -27,8 +27,8 @@
       <div class="col-xs-6 col-sm-3">
       Download:
         <ul class="list-unstyled">
-          <li><a href="https://plone.org/products/plone">Plone</a></li>
-          <li><a href="https://plone.org/products">Plone add-ons</a></li>
+          <li><a href="https://plone.org/download">Plone</a></li>
+          <li><a href="https://plone.org/download/add-ons">Plone add-ons</a></li>
         </ul>
       </div>
 
