Fix: link to add-ons page on plone.org

--- a/_templates/doormat.html
+++ b/_templates/doormat.html
@@ -27,7 +27,7 @@
       Download:
         <ul class="list-unstyled">
           <li><a href="https://plone.org/products/plone">Plone</a></li>
-          <li><a href="https://plone.org/products">Plone add-ons</a></li>
+          <li><a href="https://plone.org/download/add-ons">Plone add-ons</a></li>
         </ul>
       </div>
 
