Update: Links to https

--- a/_templates/doormat.html
+++ b/_templates/doormat.html
@@ -3,8 +3,8 @@
       <div class="col-xs-6 col-sm-3">
       Further help resources:
         <ul class="list-unstyled">
-        	<li><a href="http://community.plone.org">Community discussion</a></li>
-          <li><a href="http://stackoverflow.com/questions/tagged/plone">Stackoverflow</a></li>
+        	<li><a href="https://community.plone.org">Community discussion</a></li>
+          <li><a href="https://stackoverflow.com/questions/tagged/plone">Stackoverflow</a></li>
           <li><a href="https://plone.org/support/chat">IRC Chat</a></li>
         </ul>
       </div>
@@ -20,7 +20,7 @@
       <div class="col-xs-6 col-sm-3">
       About this documentation:
         <ul class="list-unstyled">
-          <li><a href="http://docs.plone.org/about/contributing.html">Contribute</a></li>
+          <li><a href="https://docs.plone.org/about/contributing.html">Contribute</a></li>
           <li><a href="https://github.com/plone/documentation">These docs on GitHub</a></li>
         </ul>
       </div>
