--- a/_templates/doormat.html
+++ b/_templates/doormat.html
@@ -3,9 +3,9 @@
       <div class="col-xs-6 col-sm-3">
       Further help resources:
         <ul class="list-unstyled">
-        	<li><a href="https://community.plone.org">Community discussion</a></li>
+        	<li><a href="https://community.plone.org">Community Discussion</a></li>
           <li><a href="https://stackoverflow.com/questions/tagged/plone">Stackoverflow</a></li>
-          <li><a href="https://plone.org/support/chat">IRC Chat</a></li>
+          <li><a href="https://plone.org/support/chat">Online Chat</a></li>
         </ul>
       </div>
       <div class="col-xs-6 col-sm-3">
@@ -21,14 +21,14 @@
       About this documentation:
         <ul class="list-unstyled">
           <li><a href="https://docs.plone.org/about/contributing.html">Contribute</a></li>
-          <li><a href="https://github.com/plone/documentation">These docs on GitHub</a></li>
+          <li><a href="https://github.com/plone/documentation">These Docs On GitHub</a></li>
         </ul>
       </div>
       <div class="col-xs-6 col-sm-3">
       Download:
         <ul class="list-unstyled">
           <li><a href="https://plone.org/download">Plone</a></li>
-          <li><a href="https://plone.org/download/add-ons">Plone add-ons</a></li>
+          <li><a href="https://plone.org/download/add-ons">Plone Add-ons</a></li>
         </ul>
       </div>
 
