--- a/_templates/doormat.html
+++ b/_templates/doormat.html
@@ -3,9 +3,9 @@
       <div class="col-xs-12 col-sm-6 col-md-3">
       <div class="doormat-header">Further help resources:</div>
         <ul class="list-unstyled">
-        	<li><a href="http://community.plone.org">Forum</a></li>
-          <li><a href="http://stackoverflow.com/questions/tagged/plone">Stack Overflow</a></li>
-          <li><a href="http://plone.org/support/chat">Chat Rooms</a></li>
+        	<li><a href="https://community.plone.org">Community Discussion</a></li>
+          <li><a href="https://stackoverflow.com/questions/tagged/plone">Stackoverflow</a></li>
+          <li><a href="https://plone.org/support/chat">Online Chat</a></li>
         </ul>
       </div>
        <div class="clearfix visible-xs"></div>
@@ -13,6 +13,7 @@
       <div class="doormat-header">More info on the Plone project:</div>
         <ul class="list-unstyled">
           <li><a href="https://plone.org/foundation">Plone Foundation</a></li>
+          <li><a href="https://plone.com/success-stories">Success Stories</a></li>
           <li><a href="https://plone.com/providers">Commercial Services</a></li>
         </ul>
       </div>
@@ -20,16 +21,16 @@
       <div class="col-xs-12 col-sm-6 col-md-3">
       <div class="doormat-header">About this documentation:</div>
         <ul class="list-unstyled">
-          <li><a href="http://docs.plone.org/about/contributing.html#id6">Contribute</a></li>
-          <li><a href="https://github.com/plone/documentation">These docs on GitHub</a></li>
+          <li><a href="https://docs.plone.org/about/contributing.html#id6">Contribute</a></li>
+          <li><a href="https://github.com/plone/documentation">These Docs On GitHub</a></li>
         </ul>
       </div>
        <div class="clearfix visible-xs"></div>
       <div class="col-xs-12 col-sm-6 col-md-3">
       <div class="doormat-header">Install:</div>
         <ul class="list-unstyled">
-          <li><a href="http://plone.org/download">Plone</a></li>
-          <li><a href="http://plone.org/download">Plone add-ons &amp; themes</a></li>
+          <li><a href="https://plone.org/download">Plone</a></li>
+          <li><a href="https://plone.org/download">Plone Add-ons</a></li>
         </ul>
       </div>
        <div class="clearfix visible-xs"></div>
