--- a/_templates/doormat.html
+++ b/_templates/doormat.html
@@ -14,7 +14,7 @@
         <ul class="list-unstyled">
           <li><a href="https://plone.org/foundation">Plone Foundation</a></li>
           <li><a href="https://plone.com/success-stories">Success Stories</a></li>
-          <li><a href="https://plone.com/providers">Commercial Services</a></li>
+          <li><a href="https://plone.com/providers">Providers &amp; Consultants</a></li>
         </ul>
       </div>
       <div class="clearfix visible-xs"></div>
