--- a/_templates/doormat.html
+++ b/_templates/doormat.html
@@ -21,7 +21,7 @@
       <div class="col-xs-12 col-sm-6 col-md-3">
       <div class="doormat-header">About this documentation:</div>
         <ul class="list-unstyled">
-          <li><a href="https://docs.plone.org/about/contributing.html#id6">Contribute</a></li>
+          <li><a href="https://docs.plone.org/about/contributing.html">Contribute</a></li>
           <li><a href="https://github.com/plone/documentation">These Docs On GitHub</a></li>
         </ul>
       </div>
