--- a/_templates/doormat.html
+++ b/_templates/doormat.html
@@ -1,7 +1,7 @@
 {% block doormat%}
     <nav class="row">
       <div class="col-xs-12 col-sm-6 col-md-3">
-      <div class="doormat-header">Further help resources:</div>
+      <div class="doormat-header">Further Help Resources:</div>
         <ul class="list-unstyled">
         	<li><a href="https://community.plone.org">Community Discussion</a></li>
           <li><a href="https://stackoverflow.com/questions/tagged/plone">Stackoverflow</a></li>
