--- a/_templates/doormat.html
+++ b/_templates/doormat.html
@@ -30,7 +30,7 @@
       <div class="doormat-header">Install:</div>
         <ul class="list-unstyled">
           <li><a href="https://plone.org/download">Plone</a></li>
-          <li><a href="https://plone.org/download">Plone Add-ons</a></li>
+          <li><a href="https://plone.org/download/add-ons">Plone Add-ons</a></li>
         </ul>
       </div>
        <div class="clearfix visible-xs"></div>
