Add version_warning class to make it sticky for Plone 5.x
Refs: https://github.com/plone/sphinxtheme.plone/pull/79

Closes: https://github.com/plone/documentation/issues/1473

--- a/_templates/version_warning.html
+++ b/_templates/version_warning.html
@@ -1,5 +1,5 @@
 {% block version_warning %}
-<div class="row">
+<div class="row version_warning">
   <div class="col-sm-12 admonition warning version_warning">
     <p class="first admonition-title">Warning</p>
     <p class="last">
